--- a/src/man/corpus/cmake.man.corpus/CMakeLists.txt
+++ b/src/man/corpus/cmake.man.corpus/CMakeLists.txt
@@ -142,7 +142,7 @@ ELSE(WEBOTS_BACKEND)
   LIST( APPEND ROBOT_CONNECT_SRCS ${CORPUS_INCLUDE_DIR}/ALEnactor
     ${CORPUS_INCLUDE_DIR}/NaoEnactor
     ${CORPUS_INCLUDE_DIR}/ALTranscriber
-    ${CORPUS_INCLUDE_DIR}/ALImageTranscriber
+    ${CORPUS_INCLUDE_DIR}/MmapImageTranscriber
     ${CORPUS_INCLUDE_DIR}/NaoLights
     ${CORPUS_INCLUDE_DIR}/NaoRGBLight)
 ENDIF(WEBOTS_BACKEND)
